--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test",
   "main": "app.js",
   "scripts": {
-    "start": "nodejs app.js"
+    "start": "node app.js"
   },
   "author": "jonathan.lp17@gmail.com",
   "license": "ISC",
